Commit with the knitted index

--- a/index.html
+++ b/index.html
@@ -381,8 +381,9 @@ project</a>
 <ul>
 <li><a href="#thoughts-about-the-iods-course" id="toc-thoughts-about-the-iods-course">Thoughts about the IODS
 course</a></li>
-<li><a href="#excerise-set-1" id="toc-excerise-set-1">Excerise Set
-1</a></li>
+<li><a href="#r-for-health-data-science-excerise-set-1" id="toc-r-for-health-data-science-excerise-set-1">R for Health Data
+Science: Excerise Set 1</a></li>
+<li><a href="#link-to-my-r-repository" id="toc-link-to-my-r-repository">Link to my R repository</a></li>
 </ul></li>
 <li><a href="#insert-chapter-2-title-here" id="toc-insert-chapter-2-title-here">Insert chapter 2 title
 here</a></li>
@@ -398,26 +399,34 @@ here</a></li>
 <div id="thoughts-about-the-iods-course" class="section level2">
 <h2>Thoughts about the IODS course</h2>
 <p>I am feeling slightly nervous about the course and the fast pace of
-it. I sometimes regret that I minored in chemistry instead of
-statistics, as I feel the latter would actually have been more useful. I
-have used R very little and am hoping to get a better idea how to use it
-in practice. I have used SPSS for statistical analysis and it feels
-sometimes a bit clumsy and “heavy”, whereas in my understanding R is
-very flexible. I also look forward to learning to use it for statistics.
-I am very interested in data science and found a few popular books on it
-very interesting. I learned about this course from the doctoral program
-email list.</p>
+it. I have used <strong>R</strong> very little and am hoping to get a
+better idea how to use it in practice. Before the excersices, I had no
+idea what <strong>Markdown</strong> and <strong>GitHub</strong> even
+were. I have used <strong>SPSS</strong> for statistical analysis, and it
+feels sometimes a bit clumsy and “heavy”, whereas in my understanding R
+is more flexible. I minored in <em>chemistry</em> instead of
+<em>statistics</em>, and I sometimes regret my choice. Statistics would
+certainly have been very useful in my research work, as better
+understanding would give better confidence in the analysis of the
+results. I have also read a couple of popular data science books and
+found them very interesting. I learned about this course from the
+doctoral program email list.</p>
 </div>
-<div id="excerise-set-1" class="section level2">
-<h2>Excerise Set 1</h2>
-<p>The exercises were fist rather confusing to follow but I got a hang
-of it. I struggled a bit at the end of chapter 3, chapter 4 about the
-plots was clearer</p>
+<div id="r-for-health-data-science-excerise-set-1" class="section level2">
+<h2>R for Health Data Science: Excerise Set 1</h2>
+<p>I had some basic understanding on how R works from a previous
+introductory course. The exercises were fist rather confusing to follow
+but I got a hang of it. I struggled a bit at the end of chapter 3,
+chapter 4 about the plots was easier to understand as the changes in
+code were visually represented in the makeup of the plots.</p>
+</div>
+<div id="link-to-my-r-repository" class="section level2">
+<h2>Link to my R repository</h2>
 <p><a href="https://github.com/sakariv/IODS-project" class="uri">https://github.com/sakariv/IODS-project</a></p>
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Sun Nov  5 09:45:21 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Mon Nov  6 08:32:59 2023&quot;</code></pre>
 <p>The text continues here.</p>
 <hr />
 </div>
@@ -434,7 +443,7 @@ writing and reading R code as well as statistical methods.</li>
 advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Sun Nov  5 09:45:21 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Mon Nov  6 08:32:59 2023&quot;</code></pre>
 <p>Here we go again…</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the
