Testing the commit of the R script and the current version of chapter 2

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ here</a></li>
 <h2>Thoughts about the IODS course</h2>
 <p>I am feeling slightly nervous about the course and the fast pace of
 it. I have used <strong>R</strong> very little and am hoping to get a
-better idea how to use it in practice. Before the excersices, I had no
+better idea how to use it in practice. Before the exercises, I had no
 idea what <strong>Markdown</strong> and <strong>GitHub</strong> even
 were. I have used <strong>SPSS</strong> for statistical analysis, and it
 feels sometimes a bit clumsy and “heavy”, whereas in my understanding R
@@ -426,7 +426,7 @@ code were visually represented in the makeup of the plots.</p>
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Mon Nov  6 08:32:59 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Mon Nov  6 08:38:47 2023&quot;</code></pre>
 <p>The text continues here.</p>
 <hr />
 </div>
@@ -443,7 +443,7 @@ writing and reading R code as well as statistical methods.</li>
 advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Mon Nov  6 08:32:59 2023&quot;</code></pre>
+<pre><code>## [1] &quot;Mon Nov  6 08:38:47 2023&quot;</code></pre>
 <p>Here we go again…</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the
